mdapipkg/objects/Account_Affiliation__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountStatus__c</fullName>
        <formula>TEXT(Account__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Category__c</fullName>
        <description>For functional purpose</description>
        <formula>TEXT(  Account__r.Category__c  )</formula>
        <label>Account Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contact_Key__c</fullName>
        <formula>Account__c+&apos;_&apos;+Contact__c</formula>
        <label>Account Contact Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type_Name__c</fullName>
        <formula>Account__r.RecordType.Name</formula>
        <label>Account Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account__r.Type )</formula>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Network</value>
            </filterItems>
            <filterItems>
                <field>Account.Category__c</field>
                <operation>equals</operation>
                <value>Business</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Affiliations</relationshipLabel>
        <relationshipName>Account_Affiliations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address_Status__c</fullName>
        <label>Address Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>An_Affiliate__c</fullName>
        <label>An Affiliate (Portal)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Status__c</fullName>
        <label>Benefit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Reinstated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Role__c</fullName>
        <label>Type of President</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entrepreneur</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Professional Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chapter_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to user</description>
        <label>Chapter Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Affiliations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chapter_Approval_Status__c</fullName>
        <label>Chapter Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chapter_Chair__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup on user</description>
        <label>Chapter Chair</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chapter_Dues_Paid__c</fullName>
        <label>Chapter Dues Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chapter_ID__c</fullName>
        <description>For Functional Purpose</description>
        <formula>Account__r.Parent.Id</formula>
        <label>Chapter ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_Membership_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chapter Membership Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Affiliations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Member description of company name</description>
        <inlineHelpText>Chapter Health Required Field</inlineHelpText>
        <label>Company Name (Member Description)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Order__c</fullName>
        <label>Company Order (Portal)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size (Portal)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 25</fullName>
                </value>
                <value>
                    <fullName>25 to 50</fullName>
                </value>
                <value>
                    <fullName>51 to 100</fullName>
                </value>
                <value>
                    <fullName>101 to 300</fullName>
                </value>
                <value>
                    <fullName>301 to 500</fullName>
                </value>
                <value>
                    <fullName>Over 500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Record_Type_Name__c</fullName>
        <formula>Contact__r.Record_Type_Name__c</formula>
        <label>Contact Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Spouse/Partner</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Affiliations</relationshipLabel>
        <relationshipName>Account_Affiliations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coordinates__c</fullName>
        <label>Coordinates</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Founded__c</fullName>
        <label>Date Founded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <label>Degree Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AAS</fullName>
                </value>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>ACA</fullName>
                </value>
                <value>
                    <fullName>Advanced Degree</fullName>
                </value>
                <value>
                    <fullName>AMBEP</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BBA</fullName>
                </value>
                <value>
                    <fullName>BCOM</fullName>
                </value>
                <value>
                    <fullName>BCOMM</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BES</fullName>
                </value>
                <value>
                    <fullName>BFA</fullName>
                </value>
                <value>
                    <fullName>BGS</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BS/BA</fullName>
                </value>
                <value>
                    <fullName>BSC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CFE</fullName>
                </value>
                <value>
                    <fullName>CPA</fullName>
                </value>
                <value>
                    <fullName>CPCU</fullName>
                </value>
                <value>
                    <fullName>CVL</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>DIP</fullName>
                </value>
                <value>
                    <fullName>DOCT</fullName>
                </value>
                <value>
                    <fullName>EDP</fullName>
                </value>
                <value>
                    <fullName>Fellow</fullName>
                </value>
                <value>
                    <fullName>FLDOFSTUDY</fullName>
                </value>
                <value>
                    <fullName>GED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>About the Company</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <label>Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employment</fullName>
                    <default>true</default>
                    <label>Employment</label>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date Left Organization</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_of_Study__c</fullName>
        <label>Field of Study</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Founded_In__c</fullName>
        <label>Founded In</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GeoAccuracy__c</fullName>
        <label>GeoAccuracy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <label>Graduation Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_Am__c</fullName>
        <label>I Am (Portal)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I am currently</fullName>
                </value>
                <value>
                    <fullName>I was previously</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Category_1__c</fullName>
        <inlineHelpText>Chapter Health Required Field</inlineHelpText>
        <label>Industry Category 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation/Hospitality</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Arts, Entertainment, and Recreation</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Business and Personal Support</fullName>
                </value>
                <value>
                    <fullName>Communication / Media</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Defense Industries</fullName>
                </value>
                <value>
                    <fullName>Educational Services</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Fishing and Hunting</fullName>
                </value>
                <value>
                    <fullName>Food Services and Drinking Establishment</fullName>
                </value>
                <value>
                    <fullName>Forestry</fullName>
                </value>
                <value>
                    <fullName>Health Care and Social Assistance</fullName>
                </value>
                <value>
                    <fullName>Manufacturing - Chemical</fullName>
                </value>
                <value>
                    <fullName>Manufacturing - Food and Bev</fullName>
                </value>
                <value>
                    <fullName>Manufacturing - Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing - Products</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Public Administration</fullName>
                </value>
                <value>
                    <fullName>Real Estate and Construction</fullName>
                </value>
                <value>
                    <fullName>Retail Trade</fullName>
                </value>
                <value>
                    <fullName>Technical and Scientific Services</fullName>
                </value>
                <value>
                    <fullName>Transportation and Warehousing</fullName>
                </value>
                <value>
                    <fullName>Travel Management</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade - Durable Goods</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade - NonDurable Goods</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Category_2__c</fullName>
        <label>Industry Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation/Hospitality</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Arts, Entertainment, and Recreation</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Business and Personal Support</fullName>
                </value>
                <value>
                    <fullName>Communication/Media</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Defense Industries</fullName>
                </value>
                <value>
                    <fullName>Educational Services</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Fishing and Hunting</fullName>
                </value>
                <value>
                    <fullName>Food Services and Drinking Establishment</fullName>
                </value>
                <value>
                    <fullName>Forestry</fullName>
                </value>
                <value>
                    <fullName>Health Care and Social Assistance</fullName>
                </value>
                <value>
                    <fullName>Manufacturing - Chemical</fullName>
                </value>
                <value>
                    <fullName>Manufacturing - Food and Bev</fullName>
                </value>
                <value>
                    <fullName>Manufacturing - Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing - Products</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Public Administration</fullName>
                </value>
                <value>
                    <fullName>Real Estate and Construction</fullName>
                </value>
                <value>
                    <fullName>Retail Trade</fullName>
                </value>
                <value>
                    <fullName>Technical and Scientific Services</fullName>
                </value>
                <value>
                    <fullName>Transportation and Warehousing</fullName>
                </value>
                <value>
                    <fullName>Travel Management</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade - Durable Goods</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade - NonDurable Goods</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Category_3__c</fullName>
        <label>Industry Category 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation/Hospitality</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Arts, Entertainment, and Recreation</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Business and Personal Support</fullName>
                </value>
                <value>
                    <fullName>Communication/Media</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Defense Industries</fullName>
                </value>
                <value>
                    <fullName>Educational Services</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Fishing and Hunting</fullName>
                </value>
                <value>
                    <fullName>Food Services and Drinking Establishment</fullName>
                </value>
                <value>
                    <fullName>Forestry</fullName>
                </value>
                <value>
                    <fullName>Health Care and Social Assistance</fullName>
                </value>
                <value>
                    <fullName>Manufacturing - Chemical</fullName>
                </value>
                <value>
                    <fullName>Manufacturing - Food and Bev</fullName>
                </value>
                <value>
                    <fullName>Manufacturing - Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing - Products</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Public Administration</fullName>
                </value>
                <value>
                    <fullName>Real Estate and Construction</fullName>
                </value>
                <value>
                    <fullName>Retail Trade</fullName>
                </value>
                <value>
                    <fullName>Technical and Scientific Services</fullName>
                </value>
                <value>
                    <fullName>Transportation and Warehousing</fullName>
                </value>
                <value>
                    <fullName>Travel Management</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade - Durable Goods</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade - NonDurable Goods</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Sub_Category_1__c</fullName>
        <label>Industry Sub-Category 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Industry_Category_1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation/Hospitality</fullName>
                </value>
                <value>
                    <fullName>Accounting/Bookkeeping/ Payroll Services</fullName>
                </value>
                <value>
                    <fullName>Administrative &amp; Support Services</fullName>
                </value>
                <value>
                    <fullName>Advertising &amp; Related Svcs</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Agriculture/Construct./Mining Machinery</fullName>
                </value>
                <value>
                    <fullName>Air/Rail/Wtr/Truck/Trnst Etc. Trans</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Health Care Svcs</fullName>
                </value>
                <value>
                    <fullName>Amusement</fullName>
                </value>
                <value>
                    <fullName>Animal Food</fullName>
                </value>
                <value>
                    <fullName>Animal Slaughtering &amp; Processing</fullName>
                </value>
                <value>
                    <fullName>Apparel Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Architectural/ Engineering &amp; Related Svc</fullName>
                </value>
                <value>
                    <fullName>Architectural &amp; Structural Metals</fullName>
                </value>
                <value>
                    <fullName>Arts/ Entertainment &amp; Recreation</fullName>
                </value>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>Bakeries &amp; Tortilla</fullName>
                </value>
                <value>
                    <fullName>Basic Chemical</fullName>
                </value>
                <value>
                    <fullName>Beer/ Wine&amp; Distil Alcoholic Beverages</fullName>
                </value>
                <value>
                    <fullName>Beverage &amp; Alcohol Product Mfg</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Bldg Matl/Garden Equip &amp; Sup Dealers</fullName>
                </value>
                <value>
                    <fullName>Boiler/ Tank &amp; Shipping Containers</fullName>
                </value>
                <value>
                    <fullName>Broadcasting &amp; Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Business / Personal Support Svcs</fullName>
                </value>
                <value>
                    <fullName>Chemical</fullName>
                </value>
                <value>
                    <fullName>Chemical &amp; Allied Products</fullName>
                </value>
                <value>
                    <fullName>Clothing &amp; Clothing Accessories Stores</fullName>
                </value>
                <value>
                    <fullName>Coating/Engraving/Heat Treat&amp;Allied Act</fullName>
                </value>
                <value>
                    <fullName>Commercial &amp; Svc Industry Machinery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Sub_Category_2__c</fullName>
        <label>Industry Sub-Category 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Industry_Category_2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation/Hospitality</fullName>
                </value>
                <value>
                    <fullName>Accounting/Bookkeeping/ Payroll Services</fullName>
                </value>
                <value>
                    <fullName>Administrative &amp; Support Services</fullName>
                </value>
                <value>
                    <fullName>Advertising &amp; Related Svcs</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Agriculture/Construct./Mining Machinery</fullName>
                </value>
                <value>
                    <fullName>Air/Rail/Wtr/Truck/Trnst Etc. Trans</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Health Care Svcs</fullName>
                </value>
                <value>
                    <fullName>Amusement</fullName>
                </value>
                <value>
                    <fullName>Animal Food</fullName>
                </value>
                <value>
                    <fullName>Animal Slaughtering &amp; Processing</fullName>
                </value>
                <value>
                    <fullName>Apparel Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Architectural/ Engineering &amp; Related Svc</fullName>
                </value>
                <value>
                    <fullName>Architectural &amp; Structural Metals</fullName>
                </value>
                <value>
                    <fullName>Arts/ Entertainment &amp; Recreation</fullName>
                </value>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>Bakeries &amp; Tortilla</fullName>
                </value>
                <value>
                    <fullName>Basic Chemical</fullName>
                </value>
                <value>
                    <fullName>Beer/ Wine&amp; Distil Alcoholic Beverages</fullName>
                </value>
                <value>
                    <fullName>Beverage &amp; Alcohol Product Mfg</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Bldg Matl/Garden Equip &amp; Sup Dealers</fullName>
                </value>
                <value>
                    <fullName>Boiler/ Tank &amp; Shipping Containers</fullName>
                </value>
                <value>
                    <fullName>Broadcasting &amp; Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Business / Personal Support Svcs</fullName>
                </value>
                <value>
                    <fullName>Chemical</fullName>
                </value>
                <value>
                    <fullName>Chemical &amp; Allied Products</fullName>
                </value>
                <value>
                    <fullName>Clothing &amp; Clothing Accessories Stores</fullName>
                </value>
                <value>
                    <fullName>Coating/Engraving/Heat Treat&amp;Allied Act</fullName>
                </value>
                <value>
                    <fullName>Commercial &amp; Svc Industry Machinery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>